--- a/src/dark.css
+++ b/src/dark.css
@@ -2,12 +2,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
-  
-  body {
     font-size: 1.3rem;
     font-family: 'Oswald', sans-serif;
-    background: #f9f9f9;
+  }
+
+  .dark-profile-body{
+    background-color: #090b28;
   }
   
   a {
@@ -16,10 +16,10 @@
   }
   
   .container {
-    max-width: 1100px;
+    max-width: 1500px;
     margin: auto;
     overflow: auto;
-    padding: 0 2rem;
+    padding: 0 6rem;
   }
   
   .main-header {
@@ -48,23 +48,29 @@
   
   img {
     width: 100%;
+    border-top-left-radius: 1rem;
   }
   
   .dark-card {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 2rem;
-    background: #540c0c;
+    grid-template-columns: repeat(2, 1.5fr);
+    border-radius: 1rem;
+    background: #12263e;
     margin-bottom: 2rem;
+    color: #fff;
+    box-shadow:
+    0 2.8px 2.2px rgba(45, 77, 255, 0.04),
+    0 6.7px 5.3px rgba(45,77,255, 0.048),
+    0 12.5px 10px rgba(45,77,255, 0.06), 
+    0 22.3px 17.9px rgba(45,77,255, 0.052),
+    0 41.8px 33.4px rgba(45,77,255, 0.016),
+    0 10px 80px rgba(45,77,255, 0.12);
   }
   
   .dark-card h3 {
     margin-bottom: 2rem;
   }
   
-  .dark-card img {
-    height: 400px;
-  }
   
   .dark-card > div {
     padding: 2rem;
@@ -98,18 +104,18 @@
   .switch{ 
     height:50px;
     width:80px;
-    background-color: rgb(154, 154, 52);
+    background-color: rgb(50, 50, 35) ;
     display: flex;
     justify-content: flex-start; 
     border-radius: 50px;
     padding:10px;
     cursor: pointer;
-    margin-left: 85%;
+
   }
   
   .switch[data-ison="true"]{
     justify-content: flex-end;
-    background-color: rgb(50, 50, 35);
+    background-color: rgb(154, 154, 52);
   }
   
   .handle{
@@ -118,6 +124,13 @@
     border-radius: 40px;
   }
   
+  .card:nth-child(even) img {
+    order: 2;
+    border-top-right-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+    border-top-left-radius: 0rem;
+  }
+
   @media(max-width:600px) {
     .dark-card {
       display: block;
