--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-size: 1.3rem;
-  font-family: 'Oswald', sans-serif;
 }
 
-.profile-body{
-  background-color: #fff;
+body {
+  font-size: 1.3rem;
+  font-family: 'Oswald', sans-serif;
+  background: #f9f9f9;
 }
 
 a {
@@ -15,16 +15,11 @@ a {
   text-decoration: none;
 }
 
-.navbar{
-  background-color: #1e0f31;
-  padding: 1rem;
-}
-
 .container {
-  max-width: 1500px;
+  max-width: 1100px;
   margin: auto;
   overflow: auto;
-  padding: 0 6rem;
+  padding: 0 2rem;
 }
 
 .main-header {
@@ -36,14 +31,6 @@ a {
   justify-content: center;
   text-align: center;
 }
-
-
-.sticky{ 
-  position: sticky;
-  top: 0;
-  z-index: 100;
-}
-
 
 .main-header h1 {
   font-size: 4rem;
@@ -59,29 +46,25 @@ a {
   font-size: 2rem;
 }
 
-img { 
-  object-fit: cover;
+img {
+  width: 100%;
 }
 
 .card {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  grid-gap: 2rem;
   background: #f1f1f1;
   margin-bottom: 2rem;
-  box-shadow:
-  0 2.8px 2.2px rgba(3, 4, 94, 0.04),
-  0 6.7px 5.3px rgba(3,4,94, 0.048),
-  0 12.5px 10px rgba(3,4,94, 0.06), 
-  0 22.3px 17.9px rgba(3,4,94, 0.052),
-  0 41.8px 33.4px rgba(3,4,94, 0.016),
-  0 10px 80px rgba(3,4,94, 0.12);
 }
 
 .card h3 {
   margin-bottom: 2rem;
 }
 
-
+.card img {
+  height: 400px;
+}
 
 .card > div {
   padding: 2rem;
@@ -89,9 +72,6 @@ img {
 
 .card:nth-child(even) img {
   order: 2;
-  border-top-right-radius: 1rem;
-  border-bottom-right-radius: 1rem;
-  border-top-left-radius: 0rem;
 }
 
 
