--- a/src/dark.css
+++ b/src/dark.css
@@ -1,28 +1,17 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+ .dark-profile-body{
+    background-color: #090b28;
+ }
+
+  .dark-navbar{ 
+    padding: 1rem;
+    background-color: #2c135f;
+    display: flex;
+    flex-direction: row;
+    border-bottom: #fff solid 1px;
+
   }
-  
-  body {
-    font-size: 1.3rem;
-    font-family: 'Oswald', sans-serif;
-    background: #f9f9f9;
-  }
-  
-  a {
-    color: #333;
-    text-decoration: none;
-  }
-  
-  .container {
-    max-width: 1100px;
-    margin: auto;
-    overflow: auto;
-    padding: 0 2rem;
-  }
-  
-  .main-header {
+
+  .dark-main-header {
     height: 55vh;
     padding: 2rem;
     display: flex;
@@ -32,95 +21,94 @@
     text-align: center;
   }
   
-  .main-header h1 {
+  .dark-main-header h1 {
     font-size: 4rem;
     margin-bottom: 2rem;
     line-height: 1.2;
   }
   
-  .main-header h1 span {
-    color: #b50d10;
+
+  .dark-main-header h1 span {
+    color: #ff1022;
+    font-size: 64px;
   }
-  
-  .main-header p {
+
+  .dark-main-header p {
     font-size: 2rem;
   }
   
-  img {
-    width: 100%;
+  a {
+    color: #333;
+    text-decoration: none;
   }
+
+
   
   .dark-card {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 2rem;
-    background: #540c0c;
+    background: #2c135f;
     margin-bottom: 2rem;
+    border-radius: 1rem;
+    color: white;
   }
   
-  .dark-card h3 {
-    margin-bottom: 2rem;
+  .dark-card h2{
+    margin-bottom: 1rem;
+    font-size: 32px;
   }
   
-  .dark-card img {
-    height: 400px;
-  }
   
   .dark-card > div {
     padding: 2rem;
   }
   
+  .dark-card img {
+    width: 100%;
+    border-bottom-left-radius: 1rem;
+    border-top-left-radius: 1rem;
+  }
   .dark-card:nth-child(even) img {
     order: 2;
+    order: 2;
+    border-bottom-left-radius: 0rem;
+    border-top-left-radius: 0rem;
+    border-bottom-right-radius: 1rem;
+    border-top-right-radius: 1rem;
   }
   
   
-  .btn {
+  .dark-btn {
     display: inline-block;
-    background: #000;
-    color: #fff;
+    border: 2px solid #ff1022;
+    background: #2c135f;
+    color: #ff1022;
     padding: 0.8rem 1.8rem;
     margin-top: 2rem;
     cursor: pointer;
     margin-right: 1rem;
   }
-  
-  .btn:hover {
-    opacity: 0.8;
-  }
-  
-  .button-row{ 
-    display: flex;
-    flex-direction: row;
-  
-  }
-  
-  .switch{ 
-    height:50px;
-    width:80px;
-    background-color: rgb(154, 154, 52);
-    display: flex;
-    justify-content: flex-start; 
-    border-radius: 50px;
-    padding:10px;
-    cursor: pointer;
-    margin-left: 85%;
-  }
-  
-  .switch[data-ison="true"]{
-    justify-content: flex-end;
-    background-color: rgb(50, 50, 35);
-  }
-  
-  .handle{
-    width: 30px;
-    background-color: wheat;
-    border-radius: 40px;
+
+  .dark-btn:hover {
+    box-shadow: 0 0 5px 5px rgba(255,16,34,.2), inset  0 0 5px 5px rgba(255,16,34,.2); 
+    font-weight: 300;
+   text-shadow: #ff1022 1px 0 6px;
   }
   
   @media(max-width:600px) {
     .dark-card {
       display: block;
+      border-bottom-left-radius: 0rem;
+      border-bottom-right-radius: 0rem;
+      border-top-right-radius: 1rem;
+      border-top-left-radius: 1rem;
     }
-  }
+    .dark-card img{
+        border-bottom-left-radius: 0rem;
+        border-top-left-radius: 1rem;
+        border-bottom-right-radius: 0rem;
+        border-top-right-radius: 1rem;
+      }
   
+  }
