--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,29 @@
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Oswald', sans-serif;
+  font-size: 1.15rem
 }
 
-body {
-  font-size: 1.3rem;
-  font-family: 'Oswald', sans-serif;
-  background: #f9f9f9;
+.profile-body{
+  background-color: #f5f5f5;
 }
+.profile-picture{
+  width: 50%;
+}
+
+.push-down{ margin-top: 10rem;}
+
+.navbar{ 
+  padding: 1rem;
+  background-color: #f5f5f5;
+  display: flex;
+  flex-direction: row;
+  border-bottom: #333 solid 1px;
+}
+
 
 a {
   color: #333;
@@ -16,7 +31,7 @@ a {
 }
 
 .container {
-  max-width: 1100px;
+  max-width: 1300px;
   margin: auto;
   overflow: auto;
   padding: 0 2rem;
@@ -39,32 +54,34 @@ a {
 }
 
 .main-header h1 span {
-  color: #b50d10;
+  color: #f2bb18;
+  font-size: 64px;
 }
 
 .main-header p {
   font-size: 2rem;
 }
 
-img {
+.card img {
   width: 100%;
+  border-bottom-left-radius: 1rem;
+  border-top-left-radius: 1rem;
 }
 
 .card {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 2rem;
-  background: #f1f1f1;
+  background: #e9e9e9;
   margin-bottom: 2rem;
+  border-radius: 1rem;
 }
 
-.card h3 {
-  margin-bottom: 2rem;
+.card h2{
+  margin-bottom: 1rem;
+  font-size: 32px;
 }
 
-.card img {
-  height: 400px;
-}
 
 .card > div {
   padding: 2rem;
@@ -72,12 +89,16 @@ img {
 
 .card:nth-child(even) img {
   order: 2;
+  border-bottom-left-radius: 0rem;
+  border-top-left-radius: 0rem;
+  border-bottom-right-radius: 1rem;
+  border-top-right-radius: 1rem;
 }
 
 
 .btn {
   display: inline-block;
-  background: #000;
+  background: #f2bb18;
   color: #fff;
   padding: 0.8rem 1.8rem;
   margin-top: 2rem;
@@ -92,11 +113,51 @@ img {
 .button-row{ 
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+}
 
+.switch{ 
+  height:50px;
+  width:80px;
+  background-color: #f2bb18;
+  display: flex;
+  justify-content: flex-start; 
+  border-radius: 50px;
+  padding:10px;
+  cursor: pointer;
+  margin-top: .5rem;
+}
+
+.switch[data-ison="true"]{
+  justify-content: flex-end;
+  background-color: #ff1022;
+}
+
+.handle{
+  width: 30px;
+  background-color: wheat;
+  border-radius: 40px;
 }
 
 @media(max-width:600px) {
   .card {
     display: block;
+ 
   }
+  .card img{
+    border-bottom-left-radius: 0rem;
+    border-top-left-radius: 1rem;
+    border-bottom-right-radius: 0rem;
+    border-top-right-radius: 1rem;
+  }
+  .push-down{ margin-top: 10rem;}
+  .profile-picture{
+    width: 100%;
+  }
+}
+
+.sticky{ 
+  position: sticky;
+  top: 0;
+  z-index: 100;
 }
