--- a/src/dark.css
+++ b/src/dark.css
@@ -4,7 +4,7 @@
 
   .dark-navbar{ 
     padding: 1rem;
-    background-color: #2c135f;
+    background-color: #090b28;
     display: flex;
     flex-direction: row;
     border-bottom: #fff solid 1px;
