--- a/src/index.css
+++ b/src/index.css
@@ -150,7 +150,13 @@ a {
     border-bottom-right-radius: 0rem;
     border-top-right-radius: 1rem;
   }
-  .push-down{ margin-top: 10rem;}
+  .card:nth-child(even) img {
+    border-bottom-left-radius: 0rem;
+    border-top-left-radius: 1rem;
+    border-bottom-right-radius: 0rem;
+    border-top-right-radius: 1rem;
+  }
+  .push-down{ margin-top: 5rem;}
   .profile-picture{
     width: 100%;
   }
